# pyattck

./: .flake8  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  attck_to_nist_controls.json  docs-requirements.txt  generated_attck_data.json  push.sh  pylama.ini  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
.github/workflows/: constraints.txt  generateattckdata.yml  macos.yml  main.yml  quality.yml  test.yml  ubuntu.yml  windows.yml
docs/: actor.md  attck.md  conf.py  configuration.md  control.md  enterprise.md  ics.md  index.md  index.rst  malware.md  mitigation.md  mobile.md  preattck.md  tactic.md  technique.md  tools.md
docs/class/: actor.rst  malware.rst  mitigation.rst  tactic.rst  technique.rst  tools.rst
docs/dataset/: dataset.md
docs/enterprise/: actor.md  control.md  enterprise.md  malware.md  mitigation.md  tactic.md  tools.md  (+1 more)
generateattckdocs/: README.md  requirements.txt  run.py
generateattcks/: README.md  generated_attck_data.json  requirements.txt  run.py
pyattck/: __init__.py  __main__.py  actor.py  attck.py  attckgroup.py  attckobject.py  attcksoftware.py  attcktactic.py  attcktechnique.py  base.py  cli.py  configuration.py  datasets.py  enterprise.py  ics.py  locattck.py  malware.py  mitigation.py  mobile.py  preattck.py  pyattck.py  tactic.py  technique.py  tools.py  version.py
tests/: conftest.py  test_actors.py  test_attck.py  test_campaigns.py  test_configuration.py  test_malware.py  test_mitigation.py  test_tactics.py  test_techniques.py  test_tools.py
(+129 files in other folders)
